--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Battleship Game</title>
+  <meta name="description" content="A Battleship game built with React and TDD">
 </head>
 <body>
     <div id="app"></div>
